changing navication colors

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -938,20 +938,20 @@
 
 			&:hover {
 				a, span {
-					background: #C1CAC5;
+					background: #556F7B;
 					color: #fff;
 				}
 			}
 
 			&.active {
 				a, span {
-					background: #C1CAC5;
+					background: #556F7B;
 					color: #fff;
 				}
 			}
 
 			&.current a {
-				background: #b1ddab;
+				background: #7E8D77;
 				color: #fff;
 			}
 		}
