--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -924,7 +924,7 @@
 				position: relative;
 				display: block;
 				text-decoration: none;
-				color: #6b7770;
+				color: #556F7B;
 				top: -6px;
 				padding: 6px 1.5em 0.25em 1.5em;
 				border-bottom-left-radius: 6px;
@@ -959,7 +959,7 @@
 
 	.dropotron {
 		list-style: none;
-		background: #6B7770;
+		background: #556F7B;
 		color: #fff;
 		border-radius: 6px;
 		line-height: 2.75em;
@@ -986,14 +986,14 @@
 			&:hover {
 				> a, > span {
 					color: #fff;
-					background: #7B8780;
+					background: #668694;
 				}
 			}
 
 			&.active {
 				> a, > span {
 					color: #fff;
-					background: #7B8780;
+					background: #668694;
 				}
 			}
 
@@ -1012,7 +1012,7 @@
 				left: 50%;
 				margin-left: -1em;
 				top: -0.65em;
-				border-bottom: solid 1em #6B7770;
+				border-bottom: solid 1em #556F7B;
 				border-left: solid 1em transparent;
 				border-right: solid 1em transparent;
 			}
@@ -1082,7 +1082,7 @@
 
 	#main {
 		background: #fff;
-		border-top: solid 5px #b1ddab;
+		border-top: solid 5px #7E8D77;
 		border-bottom: solid 5px #c1cac5;
 		border-top-width: 35px;
 		border-bottom-width: 10px;
