--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -466,8 +466,8 @@
 			@include vendor('transition', 'top .15s ease-in-out');
 			position: relative;
 			display: inline-block;
-			margin: 0 0.25em 0 0.25em;
-			top: 0;
+			margin: 0.25em 0.25em 0.25em 0.25em;
+			top: 6px;
 			padding-left: 0;
 
 			a {
@@ -492,28 +492,32 @@
 				top: -5px;
 
 				a {
-					&.fa-facebook {
-						background-color: #3C5A98;
-					}
-
 					&.fa-twitter {
 						background-color: #2DAAE4;
 					}
 
-					&.fa-dribbble {
-						background-color: #C4376B;
-					}
-
-					&.fa-linkedin {
-						background-color: #006599;
-					}
-
 					&.fa-instagram {
-						background-color: #2E5E86;
+						background-color: #bc2a8d;
 					}
 
-					&.fa-google-plus {
-						background-color: #DA2713;
+					&.fa-github {
+						background-color: #000000;
+					}
+
+					&.fa-linkedin-in {
+						background-color: #0072B1;
+					}
+
+					&.fa-orcid {
+						background-color: #A9E842;
+					}
+
+					&.fa-researchgate {
+						background-color: #6BE8C4;
+					}
+
+					&.fa-google {
+						background-color: #4285F4;
 					}
 				}
 			}
@@ -1077,6 +1081,25 @@
 			}
 		}
 	}
+
+	/* Banner 2 */
+
+	#bannerbrady {
+		width: 100%;
+		background-image: url("../../images/Bradys.jpg");
+		height: 205px;
+		background-color: purple;
+		background-position: center;
+		padding: 11em 0;
+	}
+
+	#bannerwhite {
+		width: 100%;
+		background-color: #FFFFFF;
+		height: 100px;
+		background-position: center;
+	}
+
 
 /* Main */
 
