--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1027,7 +1027,7 @@
 
 	#banner {
 		position: relative;
-		background-image: url('../../images/Hermanus.jpg');
+		background-image: url('../../images/DominiqueMaucieri_Hermanus.jpg');
 		background-position: top left, top left, center center;
 		background-repeat: repeat, repeat, no-repeat;
 		background-size: auto, auto, cover;
@@ -1086,7 +1086,7 @@
 
 	#bannerbrady {
 		width: 100%;
-		background-image: url("../../images/Bradys.jpg");
+		background-image: url("../../images/DominiqueMaucieri_Bradys.jpg");
 		height: 205px;
 		background-position: center;
 		padding: 11em 0;
