--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1749,7 +1749,6 @@ input, select, textarea {
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: url("images/overlay.png");
 			border-radius: 8px;
 		}
 
@@ -1792,11 +1791,12 @@ input, select, textarea {
 		font-weight: 700;
 		text-transform: uppercase;
 		text-decoration: none;
-		background: #b1ddab;
+		background: #556F7B;
 		color: #fff;
 		border: 0;
-		line-height: 1em;
-		border-radius: 8px;
+		line-height: 3em;
+		border-radius: 16px;
+		width: 300px;
 		outline: 0;
 		cursor: pointer;
 		-moz-transition: background-color .2s ease-in-out;
@@ -1814,7 +1814,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background: #c1edbb;
+			background: #738D77;
 		}
 
 		input[type="button"]:active,
@@ -1822,7 +1822,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		button:active,
 		.button:active {
-			background: #a1cd9b;
+			background: #738D77;
 		}
 
 		input[type="button"].alt,
@@ -1830,7 +1830,7 @@ input, select, textarea {
 		input[type="reset"].alt,
 		button.alt,
 		.button.alt {
-			background: #c1cac5;
+			background: #738D77;
 		}
 
 			input[type="button"].alt:hover,
@@ -1838,7 +1838,7 @@ input, select, textarea {
 			input[type="reset"].alt:hover,
 			button.alt:hover,
 			.button.alt:hover {
-				background: #ccd5d0;
+				background: #556F7B;
 			}
 
 			input[type="button"].alt:active,
@@ -1846,7 +1846,7 @@ input, select, textarea {
 			input[type="reset"].alt:active,
 			button.alt:active,
 			.button.alt:active {
-				background: #b1bab5;
+				background: #556F7B;
 			}
 
 		input[type="button"].large,
@@ -2354,7 +2354,6 @@ input, select, textarea {
 		left: 0;
 		z-index: 1000;
 		background-color: rgba(255, 255, 255, 0.95);
-		background-image: url("images/overlay.png");
 		width: 100%;
 		height: 3.25em;
 		line-height: 3.25em;
@@ -2494,7 +2493,6 @@ input, select, textarea {
 		#banner .content {
 			position: relative;
 			background-color: rgba(21, 28, 23, 0.35);
-			background-image: url("images/overlay.png"), url("images/highlight.png");
 			background-position: top left, center center;
 			background-size: auto, 100% 250%;
 			background-repeat: repeat, no-repeat;
@@ -2800,7 +2798,6 @@ input, select, textarea {
 				width: 100%;
 				z-index: 10001;
 				background-color: rgba(21, 38, 23, 0.8);
-				background-image: url("images/overlay.png");
 			}
 
 				#titleBar .title {
