--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2808,7 +2808,7 @@ input, select, textarea {
 					text-transform: uppercase;
 					font-size: 1.25em;
 					line-height: 44px;
-					color: #fff;
+					color: ##738D77;
 					z-index: 1000;
 					text-align: center;
 				}
@@ -2846,7 +2846,7 @@ input, select, textarea {
 						width: 44px;
 						height: 44px;
 						content: '\f0c9';
-						color: #fff;
+						color: ##738D77;
 						text-align: center;
 						line-height: 44px;
 						font-size: 20px;
@@ -2877,7 +2877,7 @@ input, select, textarea {
 				top: 0;
 				width: 275px;
 				z-index: 10002;
-				background-color: #353c37;
+				background-color: #738D77;
 				background-image: url("images/overlay.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 				background-image: url("images/overlay.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 				background-image: url("images/overlay.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
@@ -2939,7 +2939,7 @@ input, select, textarea {
 				}
 
 				#navPanel .depth-0 {
-					color: #fff;
+					color: ##738D77;
 				}
 
 			body.navPanel-visible #page-wrapper {
