--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2797,7 +2797,7 @@ input, select, textarea {
 				top: 0;
 				width: 100%;
 				z-index: 10001;
-				background-color: rgba(21, 38, 23, 0.8);
+				background-color: #7E8D77;
 			}
 
 				#titleBar .title {
@@ -2808,7 +2808,7 @@ input, select, textarea {
 					text-transform: uppercase;
 					font-size: 1.25em;
 					line-height: 44px;
-					color: #fff;
+					color: #7E8D77;
 					z-index: 1000;
 					text-align: center;
 				}
@@ -2842,7 +2842,7 @@ input, select, textarea {
 						position: absolute;
 						left: 0;
 						top: 0;
-						background: #b1ddab;
+						background: #7E8D77;
 						width: 44px;
 						height: 44px;
 						content: '\f0c9';
@@ -2853,7 +2853,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:active:before {
-						background-color: #a1cd9b;
+						background-color: #7E8D77;
 					}
 
 			#navPanel {
